--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -192,46 +192,53 @@
                                     <div class="form-group ">
                                         <label>{{"Comments" | localize}}</label>
                                         <div class="form-group">
-                                            <p-editor [(ngModel)]="checklist.commentBody" name="HtmlEditorInput" 
-                                                [style]="{'height':'230px'}">
-                                                <p-header>
-                                                    
-                                                    <span class="ql-formats">
-                                                        <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
-                                                            <option value="small">small</option>
-                                                            <option selected></option>
-                                                            <option value="large">large</option>
-                                                            <option value="huge">huge</option>
-                                                        </select>
-                                                        <select class="ql-font" data-toggle="tooltip" title="Font"style="width:90px">
-                                                            <option selected></option>
-                                                            <option value="serif">Serif</option>
-                                                            
-                                                            <option value="monospace">Monospace</option>
-                                                        </select>
-                                                        <button class="ql-bold compress" data-toggle="tooltip" title="Bold" aria-label="Bold"></button>
-                                                        <button class="ql-italic compress" data-toggle="tooltip" title="Italic" aria-label="Italic"></button>
-                                                        <button class="ql-underline " data-toggle="tooltip" title="Underline" aria-label="Underline"></button>
-                                                        
-                                                        <select title="Text Color" data-toggle="tooltip" title="Font Color"style="margin-top:-2.5px; padding-top:-3px" class="ql-color" defaultValue="rgb(0, 0, 0)">
-                                                            <option selected="selected"></option><option value="#e60000"></option><option value="#ff9900"></option><option value="#ffff00"></option><option value="#008a00"></option><option value="#0066cc"></option><option value="#9933ff"></option><option value="#ffffff"></option><option value="#facccc"></option><option value="#ffebcc"></option><option value="#ffffcc"></option><option value="#cce8cc"></option><option value="#cce0f5"></option><option value="#ebd6ff"></option><option value="#bbbbbb"></option><option value="#f06666"></option><option value="#ffc266"></option><option value="#ffff66"></option><option value="#66b966"></option><option value="#66a3e0"></option><option value="#c285ff"></option><option value="#888888"></option><option value="#a10000"></option><option value="#b26b00"></option><option value="#b2b200"></option><option value="#006100"></option><option value="#0047b2"></option><option value="#6b24b2"></option><option value="#444444"></option><option value="#5c0000"></option><option value="#663d00"></option><option value="#666600"></option><option value="#003700"></option><option value="#002966"></option><option value="#3d1466"></option>
-                                                        </select>
-                                                        <select title="Background Color" style="margin-top:-3px; padding-top:-3px" class="ql-background" defaultValue="rgb(255, 255, 255)">
-                                                            <option selected="selected"></option><option value="#e60000"></option><option value="#ff9900"></option><option value="#ffff00"></option><option value="#008a00"></option><option value="#0066cc"></option><option value="#9933ff"></option><option value="#ffffff"></option><option value="#facccc"></option><option value="#ffebcc"></option><option value="#ffffcc"></option><option value="#cce8cc"></option><option value="#cce0f5"></option><option value="#ebd6ff"></option><option value="#bbbbbb"></option><option value="#f06666"></option><option value="#ffc266"></option><option value="#ffff66"></option><option value="#66b966"></option><option value="#66a3e0"></option><option value="#c285ff"></option><option value="#888888"></option><option value="#a10000"></option><option value="#b26b00"></option><option value="#b2b200"></option><option value="#006100"></option><option value="#0047b2"></option><option value="#6b24b2"></option><option value="#444444"></option><option value="#5c0000"></option><option value="#663d00"></option><option value="#666600"></option><option value="#003700"></option><option value="#002966"></option><option value="#3d1466"></option>
-                                                        </select>
-                                                            <button class="ql-list" data-toggle="tooltip" title="Numbered List" value="ordered"></button>
-                                                            <button class="ql-list" value="bullet" data-toggle="tooltip" title="Bullet List"></button>
-                                                        <select title="Text Alignment" data-toggle="tooltip" title="Text Alignment" style="margin-top:-3px; padding-top:-3px" class="ql-align" >
-                                                            <option selected>Gauche</option>
-                                                            <option value="center" label="Center"></option>
-                                                            <option value="right" label="Right"></option>
-                                                            <option value="justify" label="Justify"></option>
-                                                        </select>
-                                                         
-                                                        <button aria-label="Image" data-toggle="tooltip" title="Upload Image" class="ql-image"></button>
-                                                    </span>
-                                                </p-header>
-                                            </p-editor>
+                                            <input hidden type="file" (change)="uploadFile($event)" #file>
+
+<!--
+ <p-editor [(ngModel)]="text2" [style]="{'height':'320px'}">
+  <p-header>
+    
+  </p-header>
+</p-editor>
+
+<div class="chat-wrapper"  [ngStyle]="{'max-height.px': maxhheight}">
+  <div *ngFor="let i of myfile; let indexx = index" class="chat-wrapper-inner">
+    <a href="javascipt:void(0)" class="docx-btn">
+      <span>{{i.name}}</span>
+      <i class="fa fa-times" (click)="removeFile(indexx)">x</i>
+    </a>
+  </div>
+</div>
+ <p>hellow</p> -->
+ 
+ <div id="toolbar">
+  <!-- Add font size dropdown -->
+  <select class="ql-size">
+    <option value="small"></option>
+    <!-- Note a missing, thus falsy value, is used to reset to default -->
+    <option selected></option>
+    <option value="large"></option>
+    <option value="huge"></option>
+  </select>	
+  <!-- Add a bold button -->
+  <button class="ql-bold"></button>
+  <!-- Add subscript and superscript buttons -->
+  <button class="ql-script" value="sub"></button>
+  <button class="ql-script" value="super"></button>
+    <button (click)="showmefile()">
+      <svg viewBox="0 0 18 18">
+        <rect class="ql-stroke" height="10" width="12" x="3" y="4"></rect>
+        <circle class="ql-fill" cx="6" cy="7" r="1">
+
+        </circle>
+        <polyline class="ql-even ql-fill" points="5 12 5 11 7 9 8 10 11 7 13 9 13 12 5 12">
+        </polyline>
+      </svg>
+
+    </button>
+  
+</div>
+<div id="editor" style="height:400px;"></div> 
                                         </div>
                                         <!-- <div class="btnMargin" >
                                         <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
