Comments UI issue resolved

--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -38,6 +38,8 @@
                                 </div>
 
                             </div>
+                            
+                            <h5 class="text-navyblue">{{"Instruction" | localize}} </h5>
                             <div class="row" *ngIf="taskDetailObject.instructionBody == null">
                             </div>
 
