--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -68,18 +68,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="dropdown">
-                                        <button class="btn btn-secondary dropdown-toggle" type="button"
-                                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
-                                            {{"Comment" | localize}}
-                                        </button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <a class="dropdown-item" href="#" data-toggle="kt-tooltip"
-                                                title="Tooltip title" data-placement="right" data-skin="dark"
-                                                data-container="body">{{"Action" | localize}}</a>
-                                        </div>
-                                    </div>
+                                    
                                     <!-- <div class="commentmainView show-comments">
                                         <div class="kt-widget3 ">
                                             <div *ngFor="let i of comment" class="kt-widget3__item ">
@@ -217,7 +206,7 @@
                             <div class="form-group giveCommentView" [ngClass]="{'disabled':!monthStatus}">
                                 <label>{{"Comments" | localize}}</label>
                                 <div class="form-group">
-                                    <p-editor [(ngModel)]="checklist.commentBody" name="HtmlEditorInput" 
+                                    <p-editor [(ngModel)]="checklist.commentBody" name="" 
                                         [style]="{'height':'230px'}">
                                         <p-header>
                                             <span class="ql-formats">
@@ -333,7 +322,7 @@
                     <div class="row">
                         <div class="col-sm-10 form-group">
                             <div class="activity-box">
-                                <h5>Activity</h5>
+                                <h5>{{"Activity" | localize}}</h5>
                             </div>
                             <tabset class="tab-container tabbable-line">
                                 <tab heading="{{'Comments' | localize}}">
