Buttons Width UI issue resolved

--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="kt-subheader__toolbar">
             <div class="kt-subheader__wrapper">
-                <button (click)="redirectToCreateTask()" class="btn btn-primary"><i class="fa fa-plus"></i>
+                <button (click)="redirectToCreateTask()" class="btn btn-primary btn-width"><i class="fa fa-plus"></i>
                     {{"AddNew" | localize}}</button>
             </div>
         </div>
