--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -200,7 +200,7 @@
                                             <div class="kt-portlet__head">
                                             </div>
                                             <div class="form-group margin-top-5">
-                                                <button [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" class="btn btn-brand" type="submit">
+                                                <button [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" class="btn btn-brand btn-width" type="submit">
                                                     <i class="fa fa-save"></i>
                                                     <span>{{"Save" | localize}}</span>
                                                 </button>
