--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -134,12 +134,12 @@
                         <div class="kt-portlet__head">
                         </div>
                         <div class="form-group margin-top-5">
-                            <button type="button" class="btn btn-brand" *ngIf="editAccountCheck == false" type="submit"
+                            <button type="button" class="btn btn-brand btn-width" *ngIf="editAccountCheck == false" type="submit"
                                 [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
                                 <i class="fa fa-save"></i>
                                 <span>{{"Create" | localize}}</span>
                             </button>
-                            <button *ngIf="editAccountCheck == true" class="btn btn-brand" type="submit"
+                            <button *ngIf="editAccountCheck == true" class="btn btn-brand btn-width" type="submit"
                                 [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
                                 <i class="fa fa-save"></i>
                                 <span>{{"Update" | localize}}</span>
