--- a/angular/src/app/main/account/accountsubtype/accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/accountsubtype.component.html
@@ -13,7 +13,7 @@
                 <div class="kt-subheader__toolbar">
                     <div class="kt-subheader__wrapper">
                         <button (click)="createCategory()" *ngIf="'Pages.Categories.Create' | permission"
-                            class="btn btn-primary"><i class="fa fa-plus"></i> {{"AddNew" | localize}}</button>
+                            class="btn btn-primary btn-width"><i class="fa fa-plus"></i> {{"AddNew" | localize}}</button>
                     </div>
                 </div>
             </div>
