--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -153,7 +153,7 @@
                                         </div>
 
                                  <div class="mt-3 d-flex justify-content-end">
-                                    <button class="btn btn-brand"
+                                    <button class="btn btn-brand btn-width"
                                         (click)="onComment()">{{"Comment" | localize}}</button>
                                     <!-- <button class="btn btn-brand"
                                         (click)="onCancelComment()">{{"Cancel" | localize}}</button> -->
