--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -34,7 +34,7 @@
                                 <div class="kt-subheader__toolbar">
                                     <div class="kt-subheader__wrapper">
 
-                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand" (click)="RedirectToAddNewItem()"><i
+                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand btn-width" (click)="RedirectToAddNewItem()"><i
                                             class="fa fa-plus"></i>
                                         {{"AddNew" | localize}}</button>
                                         <a class="ml-3" href="javascript: void(0);" (click)="BackToReconcileList()">
@@ -337,7 +337,7 @@
                                             </p-editor>
                                 </div>  
                                 <div class="mt-3 d-flex justify-content-end" >
-                                    <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
+                                    <button class="btn btn-brand btn-width" (click)="onComment()">{{"Comment" | localize}}</button>
                                 </div>
                                  <!--<button class="btn btn-brand" (click)="onCancelComment()">{{"Cancel" | localize}}</button> -->
                             </div>      
@@ -376,7 +376,7 @@
                                 </table>
                             </div>
                             <div [ngClass]="{'disabled':!monthStatus}"  class="Check-reconcile-btn">
-                                <button (click)="reconciledClick()" class="btn btn-brand" >{{"Check as Reconciled" | localize}}</button>
+                                <button (click)="reconciledClick()" class="btn btn-brand btn-width" >{{"Check as Reconciled" | localize}}</button>
                             </div>
                         </div>
                     </div>
