--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -135,7 +135,7 @@
                                             </p-editor>
                                         </div> 
                                         <div class="mt-3 d-flex justify-content-end" >
-                                            <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
+                                            <button class="btn btn-brand btn-width" (click)="onComment()">{{"Comment" | localize}}</button>
                                         </div>
                                      <!--<button class="btn btn-brand" (click)="onCancelComment()">{{"Cancel" | localize}}</button> -->
                                 </div>
