--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="kt-subheader__toolbar">
                                     <div class="kt-subheader__wrapper">
-                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand" (click)="RedirectToAddNew()"><i
+                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand btn-width" (click)="RedirectToAddNew()"><i
                                             class="fa fa-plus"></i>
                                         {{"AddNew" | localize}}</button>
                                         <a class="ml-3" href="javascript: void(0);" (click)="BackToReconcileList()">
@@ -303,7 +303,7 @@
                                             </p-editor>
                                         </div> 
                                         <div class="mt-3 d-flex justify-content-end" >
-                                            <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
+                                            <button class="btn btn-brand btn-width" (click)="onComment()">{{"Comment" | localize}}</button>
                                         </div>
                                         <!-- <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
                                         <button class="btn btn-brand" (click)="onCancelComment()">{{"Cancel" | localize}}</button> -->
@@ -339,7 +339,7 @@
                                 </table>
                             </div>
                             <div [ngClass]="{'disabled':!monthStatus}" class="Check-reconcile-btn">
-                                <button (click)="reconciledClick()" class="btn btn-brand" >{{"Check as Reconciled" | localize}}</button>
+                                <button (click)="reconciledClick()" class="btn btn-brand btn-width" >{{"Check as Reconciled" | localize}}</button>
                             </div>
                         </div>
                           
